Adicionado novo favicon

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iLovePDF Clone - Upload de Arquivos</title>
-    <meta name="description" content="Ferramenta online para manipulação de arquivos PDF" />
-    <meta name="author" content="Lovable" />
+    <title>AI Tools Beta</title>
+    <meta name="description" content="Ferramenta online de IA's" />
+    <meta name="author" content="AI Tools" />
+    <link rel="icon" href="./public/favicon.ico" />
+<!--    <meta property="og:title" content="iLovePDF Clone - Upload de Arquivos" />-->
+<!--    <meta property="og:description" content="Ferramenta online para manipulação de arquivos PDF" />-->
+<!--    <meta property="og:type" content="website" />-->
+<!--    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />-->
 
-    <meta property="og:title" content="iLovePDF Clone - Upload de Arquivos" />
-    <meta property="og:description" content="Ferramenta online para manipulação de arquivos PDF" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<!--    <meta name="twitter:card" content="summary_large_image" />-->
+<!--    <meta name="twitter:site" content="@lovable_dev" />-->
+<!--    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />-->
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
